--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,8 @@ torch==2.5.1
 torchaudio==2.5.1
 torchvision==0.20.1
 transformers~=4.50.0
+flask==3.0.2
+flask-wtf==1.2.1
+flask-cors==4.0.0
+Werkzeug==3.0.1
+requests==2.31.0
